# genecrawler

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  genecrawler.py  genecrawler_tui.py  heredis_adapter.py  pyproject.toml
docs/: CHANGELOG.md  GENETEKA_FIX.md  MAX_PAGES_FEATURE.md  MIGRATION_NOTES.md  README.md  README_HEREDIS.md  REFACTORING.md  REFACTORING_SUMMARY.md  TUI_GUIDE.md  UNCERTAIN_NAME_FILTER.md  USAGE.md  VOIVODESHIP_PARSING.md
genecrawler/: __init__.py  cli.py  database.py  location.py  models.py  utils.py
genecrawler/searchers/: __init__.py  basia.py  geneteka.py  poznan.py  ptg.py
tests/: __init__.py  test_integration.py  test_max_pages.py  test_max_pages_simple.py  test_refactoring.py  test_tui.py
